Endpoint for information gathering (#181)
* first try of endpoint

* change to scanResult sql file

* swaggo

* fix dto

* handle null

* tests handler

* fix observations

* update yaml

* add bruno

* hotfix kt-558

* fix fmt

* updating swagger for os vulnerabilities

* fix: remediations in OS

---------
