# pkg/dto/response.go
@@ -266,7 +266,6 @@ type ScanVulnerabilityDetectedOSResponse struct {
 	TotalVulnerabilities int                     `json:"total_vulnerabilities"`
 	SeverityCounts       tools.SeverityCounts    `json:"severity_counts"`
 	Vulnerabilities      []ScanVulnerabilityItem `json:"vulnerabilities"`
-	CWERemediations      []CWERemediation        `json:"remediations"`
 	References           []string                `json:"references"`
 }
 
@@ -429,7 +428,7 @@ type ScanVulnerabilityDetailResponse struct {
 
 	Metrics []CVSSMetric `json:"metrics"`
 
-	CWERemediations []CWERemediation `json:"remediation"`
+	CWERemediations []CWERemediation `json:"remediations"`
 
 	EPSSScore      *float64   `json:"epss_score,omitempty"`
 	EPSSPercentile *float64   `json:"epss_percentile,omitempty"`
