# pkg/handlers/vulnerability.go
@@ -26,6 +26,18 @@ func NewVulnerabilityHandlers(vulnService interfaces.IVulnerabilityService) *Vul
 	}
 }
 
+// GetVulnerability returns detailed information about a vulnerability by its ID.
+// @Summary      GetVulnerability
+// @Description  Retrieve detailed information about a vulnerability for a given Vulnerability ID.
+// @Tags         Vulnerabilities
+// @Produce      json
+// @Param        id   path      string  true  "Vulnerability ID"
+// @Success      200  {object}  dto.ScanVulnerabilityDetailResponse
+// @Failure      400  {object}  api.APIError         "Invalid UUID format for Vulnerability ID"
+// @Failure      404  {object}  api.APIError         "Vulnerability not found"
+// @Failure      500  {object}  api.APIError         "Internal server error"
+// @Security     BearerAuth
+// @Router       /api/vulnerabilities/{id} [get]
 func (h *VulnerabilityHandlers) GetVulnerability(w http.ResponseWriter, r *http.Request) error {
 	vulnID, err := GetUUID(r)
 	if err != nil {
